tests/typecheck/should_compile/tc015.hs
module ShouldSucceed where

u x = \ (y,z) -> x
