tests/typecheck/should_fail/tcfail010.hs
module ShouldFail where

q = \ (y:z) -> z+2
